all class names changed

--- a/about_us.html
+++ b/about_us.html
@@ -61,7 +61,7 @@
 
 
         <!-- header body content start -->
-        <div class="header-container">
+        <div class="hamid-header-container">
 
             <!-- banner start -->
             <div class="hamid-head-baner">
