--- a/our-team.html
+++ b/our-team.html
@@ -59,13 +59,13 @@
         </nav>
         <div class="header-body">
             <!-- end of navigation bar -->
-            <div class="header-container">
+            <div class="hamid1-header-container">
 
                 <!-- banner start -->
-                <div class="head-baner">
-                    <img src="img/our team/our-team-banner.svg" alt="" class="head-img">
-                    <img src="img/our team/Patterns-our-team-patterns.svg" alt="" class="head-img2">
-                    <span class="head-text">Our Team</span>
+                <div class="hamid1-head-baner">
+                    <img src="img/our team/our-team-banner.svg" alt="" class="hamid1-head-img">
+                    <img src="img/our team/Patterns-our-team-patterns.svg" alt="" class="hamid1-head-img2">
+                    <span class="hamid1-head-text">Our Team</span>
                 </div>
                 <!--banner end -->
             </div>
@@ -73,22 +73,22 @@
     </header>
     <main>
 
-        <div class="experts">
-            <div class="my-container">
-                <div class="experts-text">
+        <div class="hamid1-experts">
+            <div class="hamid1-my-container">
+                <div class="hamid1-experts-text">
                     <h3>Team</h3>
-                    <p class="big-p">Our Organic Experts</p>
-                    <p class="small-p">Simply dummy text of the printing and typesetting industry. Lorem had ceased to been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
+                    <p class="hamid1-big-p">Our Organic Experts</p>
+                    <p class="hamid1-small-p">Simply dummy text of the printing and typesetting industry. Lorem had ceased to been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
                 </div>
                 
-                <div class="experts-grid">
-                    <div class="expert-box">
+                <div class="hamid1-experts-grid">
+                    <div class="hamid1-expert-box">
                         <img src="img/our team/Photoex-1.svg" alt="">
-                        <div class="experts-desc">
+                        <div class="hamid1-experts-desc">
                             <h5>Giovani Bacardo</h5>
                             <h3>Farmer</h3>
                         </div>
-                        <div class="expert-socials">
+                        <div class="hamid1-expert-socials">
                             <a href="https://www.facebook.com/">
                                 <img src="img/about_us/Fb.svg" alt="">
                             </a>
@@ -98,13 +98,13 @@
                             </a>
                         </div>                       
                     </div>
-                    <div  class="expert-box">
+                    <div  class="hamid1-expert-box">
                         <img src="img/our team/Photoex-2.svg" alt="">
-                        <div class="experts-desc">
+                        <div class="hamid1-experts-desc">
                             <h5>Marianne Loreno</h5>
                             <h3>Designer</h3>
                         </div> 
-                        <div class="expert-socials">
+                        <div class="hamid1-expert-socials">
                             <a href="https://www.instagram.com/">
                                 <img src="img/about_us/Insta.svg" alt="">
                             </a>
@@ -117,13 +117,13 @@
 
                         </div>                       
                     </div>
-                    <div class="expert-box">
+                    <div class="hamid1-expert-box">
                         <img src="img/our team/Photoex-3.svg" alt="">
-                        <div class="experts-desc">
+                        <div class="hamid1-experts-desc">
                             <h5>Riga Pelore</h5>
                         <h3>Farmer</h3>
                         </div>
-                        <div class="expert-socials">
+                        <div class="hamid1-expert-socials">
                             <a href="https://www.instagram.com/">
                                 <img src="img/about_us/Insta.svg" alt="">
                             </a>
@@ -135,13 +135,13 @@
                             </a>
                         </div>  
                     </div>
-                    <div class="expert-box">
+                    <div class="hamid1-expert-box">
                         <img src="img/our team/Photo-ex4.svg" alt="">
-                        <div class="experts-desc">
+                        <div class="hamid1-experts-desc">
                             <h5>Keira Knightley</h5>
                         <h3>Farmer</h3>
                         </div>
-                        <div class="expert-socials">
+                        <div class="hamid1-expert-socials">
                             <a href="https://www.instagram.com/">
                                 <img src="img/about_us/Insta.svg" alt="">
                             </a>
@@ -153,13 +153,13 @@
                             </a>
                         </div>  
                     </div>
-                    <div class="expert-box">
+                    <div class="hamid1-expert-box">
                         <img src="img/our team/Photo-ex5.svg" alt="">
-                        <div class="experts-desc">
+                        <div class="hamid1-experts-desc">
                             <h5>Scott Lawrence</h5>
                         <h3>Designer</h3>
                         </div>
-                        <div class="expert-socials">
+                        <div class="hamid1-expert-socials">
                             <a href="https://www.instagram.com/">
                                 <img src="img/about_us/Insta.svg" alt="">
                             </a>
@@ -171,13 +171,13 @@
                             </a>
                         </div>  
                     </div>
-                    <div class="expert-box">
+                    <div class="hamid1-expert-box">
                         <img src="img/our team/Photo-ex6.svg" alt="">
-                        <div class="experts-desc">
+                        <div class="hamid1-experts-desc">
                             <h5>Karen Allen</h5>
                         <h3>Farmer</h3>
                         </div>
-                        <div class="expert-socials">
+                        <div class="hamid1-expert-socials">
                             <a href="https://www.instagram.com/">
                                 <img src="img/about_us/Insta.svg" alt="">
                             </a>
