--- a/shop.html
+++ b/shop.html
@@ -58,148 +58,148 @@
             </div>
         </nav>
         <!-- end of navigation bar -->
-        <div class="header-container">
+        <div class="hamid4-header-container">
 
             <!-- banner start -->
-            <div class="head-baner">
-                <img src="img/shop/banner.svg" alt="" class="head-img">
-                <img src="img/shop/Bg Patterns.svg" class="head-img2">
-                <span class="head-text">shop</span>
+            <div class="hamid4-head-baner">
+                <img src="img/shop/banner.svg" alt="" class="hamid4-head-img">
+                <img src="img/shop/Bg Patterns.svg" class="hamid4-head-img2">
+                <span class="hamid4-head-text">shop</span>
             </div>
             <!--banner end -->
         </div>
     </header>
     <main>
-        <div class="my-container">
-            <div class="products-grid">
-                <div class="product1">
-                    <div class="name">Vegetable</div>
+        <div class="hamid4-my-container">
+            <div class="hamid4-products-grid">
+                <div class="hamid4-product1">
+                    <div class="hamid4-name">Vegetable</div>
                     <span>Calabrese Broccoli</span>
                     <hr>
-                    <div class="prices">
-                        <span class="ex-price">$20.00</span>
-                        <span class="current-price">$13.00</span>
+                    <div class="hamid4-prices">
+                        <span class="hamid4-ex-price">$20.00</span>
+                        <span class="hamid4-current-price">$13.00</span>
                         <img src="img/shop/products/Star.svg" alt="">
                     </div>
                 </div>
-                <div class="product2">
-                    <div class="name">Fresh</div>
+                <div class="hamid4-product2">
+                    <div class="hamid4-name">Fresh</div>
                     <img src="" alt="">
                     <span>Fresh Banana Fruites</span>
                     <hr>
-                    <div class="prices">
-                        <span class="ex-price">$20.00</span>
-                        <span class="current-price">$14.00</span>
+                    <div class="hamid4-prices">
+                        <span class="hamid4-ex-price">$20.00</span>
+                        <span class="hamid4-current-price">$14.00</span>
                         <img src="img/shop/products/Star.svg" alt="">
                     </div>
                 </div>
-                <div class="product3">
-                    <div class="name">Millets</div>
+                <div class="hamid4-product3">
+                    <div class="hamid4-name">Millets</div>
                     <img src="" alt="">
                     <span>White Nuts</span>
                     <hr>
-                    <div class="prices">
-                        <span class="ex-price">$20.00</span>
-                        <span class="current-price">$15.00</span>
+                    <div class="hamid4-prices">
+                        <span class="hamid4-ex-price">$20.00</span>
+                        <span class="hamid4-current-price">$15.00</span>
                         <img src="img/shop/products/Star.svg" alt="">
                     </div>
                 </div>
-                <div class="product4">
-                    <div class="name">Vegetable</div>
+                <div class="hamid4-product4">
+                    <div class="hamid4-name">Vegetable</div>
                     <img src="" alt="">
                     <span>Vegan Red Tomato</span>
                     <hr>
-                    <div class="prices">
-                        <span class="ex-price">$20.00</span>
-                        <span class="current-price">$17.00</span>
+                    <div class="hamid4-prices">
+                        <span class="hamid4-ex-price">$20.00</span>
+                        <span class="hamid4-current-price">$17.00</span>
                         <img src="img/shop/products/Star.svg" alt="">
                     </div>
                 </div>
-                <div class="product5">
-                    <div class="name">Health</div>
+                <div class="hamid4-product5">
+                    <div class="hamid4-name">Health</div>
                     <img src="" alt="">
                     <span>Mung Bean</span>
                     <hr>
-                    <div class="prices">
-                        <span class="ex-price">$20.00</span>
-                        <span class="current-price">$11.00</span>
+                    <div class="hamid4-prices">
+                        <span class="hamid4-ex-price">$20.00</span>
+                        <span class="hamid4-current-price">$11.00</span>
                         <img src="img/shop/products/Star.svg" alt="">
                     </div>
                 </div>
-                <div class="product6">
-                    <div class="name">Nuts</div>
+                <div class="hamid4-product6">
+                    <div class="hamid4-name">Nuts</div>
                     <img src="" alt="">
                     <span>Brown Hazelnut</span>
                     <hr>
-                    <div class="prices">
-                        <span class="ex-price">$20.00</span>
-                        <span class="current-price">$12.00</span>
+                    <div class="hamid4-prices">
+                        <span class="hamid4-ex-price">$20.00</span>
+                        <span class="hamid4-current-price">$12.00</span>
                         <img src="img/shop/products/Star.svg" alt="">
                     </div>
                 </div>
-                <div class="product7">
-                    <div class="name">Fresh</div>
+                <div class="hamid4-product7">
+                    <div class="hamid4-name">Fresh</div>
                     <img src="" alt="">
                     <span>Eggs</span>
                     <hr>
-                    <div class="prices">
-                        <span class="ex-price">$20.00</span>
-                        <span class="current-price">$17.00</span>
+                    <div class="hamid4-prices">
+                        <span class="hamid4-ex-price">$20.00</span>
+                        <span class="hamid4-current-price">$17.00</span>
                         <img src="img/shop/products/Star.svg" alt="">
                     </div>
                 </div>
-                <div class="product8">
-                    <div class="name">Fresh</div>
+                <div class="hamid4-product8">
+                    <div class="hamid4-name">Fresh</div>
                     <img src="" alt="">
                     <span>Zelco Suji Elaichi Rusk</span>
                     <hr>
-                    <div class="prices">
-                        <span class="ex-price">$20.00</span>
-                        <span class="current-price">$15.00</span>
+                    <div class="hamid4-prices">
+                        <span class="hamid4-ex-price">$20.00</span>
+                        <span class="hamid4-current-price">$15.00</span>
                         <img src="img/shop/products/Star.svg" alt="">
                     </div>
                 </div>
-                <div class="product9">
-                    <div class="name">Health</div>
+                <div class="hamid4-product9">
+                    <div class="hamid4-name">Health</div>
                     <img src="" alt="">
                     <span>Mung Bean</span>
                     <hr>
-                    <div class="prices">
-                        <span class="ex-price">$20.00</span>
-                        <span class="current-price">$11.00</span>
+                    <div class="hamid4-prices">
+                        <span class="hamid4-ex-price">$20.00</span>
+                        <span class="hamid4-current-price">$11.00</span>
                         <img src="img/shop/products/Star.svg" alt="">
                     </div>
                 </div>
-                <div class="product10">
-                    <div class="name">Nuts</div>
+                <div class="hamid4-product10">
+                    <div class="hamid4-name">Nuts</div>
                     <img src="" alt="">
                     <span>White Hazelnut</span>
                     <hr>
-                    <div class="prices">
-                        <span class="ex-price">$20.00</span>
-                        <span class="current-price">$12.00</span>
+                    <div class="hamid4-prices">
+                        <span class="hamid4-ex-price">$20.00</span>
+                        <span class="hamid4-current-price">$12.00</span>
                         <img src="img/shop/products/Star.svg" alt="">
                     </div>
                 </div>
-                <div class="product11">
-                    <div class="name">Fresh</div>
+                <div class="hamid4-product11">
+                    <div class="hamid4-name">Fresh</div>
                     <img src="" alt="">
                     <span>Fresh Corn</span>
                     <hr>
-                    <div class="prices">
-                        <span class="ex-price">$20.00</span>
-                        <span class="current-price">$17.00</span>
+                    <div class="hamid4-prices">
+                        <span class="hamid4-ex-price">$20.00</span>
+                        <span class="hamid4-current-price">$17.00</span>
                         <img src="img/shop/products/Star.svg" alt="">
                     </div>
                 </div>
-                <div class="product12">
-                    <div class="name">Fresh</div>
+                <div class="hamid4-product12">
+                    <div class="hamid4-name">Fresh</div>
                     <img src="" alt="">
                     <span>Organic Almonds</span>
                     <hr>
-                    <div class="prices">
-                        <span class="ex-price">$20.00</span>
-                        <span class="current-price">$15.00</span>
+                    <div class="hamid4-prices">
+                        <span class="hamid4-ex-price">$20.00</span>
+                        <span class="hamid4-current-price">$15.00</span>
                         <img src="img/shop/products/Star.svg" alt="">
                     </div>
                 </div>
