--- a/shop_single.html
+++ b/shop_single.html
@@ -57,36 +57,36 @@
                 </div>
             </div>
         </nav>
-        <div class="header-body">
+        <div class="hamid3-header-body">
             <!-- end of navigation bar -->
-            <div class="header-container">
+            <div class="hamid3-header-container">
 
                 <!-- banner start -->
-                <div class="head-baner">
-                    <img src="img/Images-s-img.svg" alt="" class="head-img">
-                    <img src="img/Background Pattern-shop-single.svg" alt="" class="head-img2">
-                    <span class="head-text">Shop Single</span>
+                <div class="hamid3-head-baner">
+                    <img src="img/Images-s-img.svg" alt="" class="hamid3-head-img">
+                    <img src="img/Background Pattern-shop-single.svg" alt="" class="hamid3-head-img2">
+                    <span class="hamid3-head-text">Shop Single</span>
                 </div>
                 <!--banner end -->
             </div>
         </div>
     </header>
     <main>
-        <div class="my-container">
-            <div class="product-select">
-                <div class="product-img">
-                    <div class="name">Millets</div>
+        <div class="hamid3-my-container">
+            <div class="hamid3-product-select">
+                <div class="hamid3-product-img">
+                    <div class="hamid3-name">Millets</div>
                 </div>
-                <div class="product-text">
-                    <div class="prices-container">
+                <div class="hamid3-product-text">
+                    <div class="hamid3-prices-container">
                         <h3>Health Pistachios</h3>
                         <img src="img/shop/products/Star.svg" alt="">
-                        <div class="product-prices">
+                        <div class="hamid3-product-prices">
                             <span>$20.00</span>
                             <span>$13.00</span>
                         </div>
-                        <p class="small-p">Simply dummy text of the printing and typesetting industry. Lorem had ceased to been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
-                        <div class="pick-scale">
+                        <p class="hamid3-small-p">Simply dummy text of the printing and typesetting industry. Lorem had ceased to been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
+                        <div class="hamid3-pick-scale">
                             <span>Quantity:</span>
                             <input type="number" name="" id="" value="1" min="1">
                             <button class="footer-form-button">
@@ -101,61 +101,61 @@
                 </div>
             </div>
 
-            <div class="product-inf">
-                <div class="buttons-box">
-                    <button class="footer-form-button desc">Product Description</button>
-                    <button class="footer-form-button add-inf">Additional Info</button>
+            <div class="hamid3-product-inf">
+                <div class="hamid3-buttons-box">
+                    <button class="footer-form-button hamid3-desc">Product Description</button>
+                    <button class="footer-form-button hamid3-add-inf">Additional Info</button>
                 </div>
                 <p>
                     Welcome to the world of natural and organic. Here you can discover the bounty of nature. We have grown on the principles of health, ecology, and care. We aim to give our customers a healthy chemical-free meal for perfect nutrition. It offers about 8–10% carbs. Simple sugars — such as glucose and fructose — make up 70% and 80% of the carbs in raw.
                 </p>
             </div>
 
-            <div class="related-products">
+            <div class="hamid3-related-products">
                 <h1>
                     Related Products
                 </h1>
-                <div class="products-grid">
-                    <div class="product1">
-                        <div class="name">Vegetable</div>
+                <div class="hamid3-products-grid">
+                    <div class="hamid3-product1">
+                        <div class="hamid3-name">Vegetable</div>
                         <span>Calabrese Broccoli</span>
                         <hr>
-                        <div class="prices">
-                            <span class="ex-price">$20.00</span>
-                            <span class="current-price">$13.00</span>
+                        <div class="hamid3-prices">
+                            <span class="hamid3-ex-price">$20.00</span>
+                            <span class="hamid3-current-price">$13.00</span>
                             <img src="img/shop/products/Star.svg" alt="">
                         </div>
                     </div>
-                    <div class="product2">
-                        <div class="name">Fresh</div>
+                    <div class="hamid3-product2">
+                        <div class="hamid3-name">Fresh</div>
                         <img src="" alt="">
                         <span>Fresh Banana Fruites</span>
                         <hr>
-                        <div class="prices">
-                            <span class="ex-price">$20.00</span>
-                            <span class="current-price">$14.00</span>
+                        <div class="hamid3-prices">
+                            <span class="hamid3-ex-price">$20.00</span>
+                            <span class="hamid3-current-price">$14.00</span>
                             <img src="img/shop/products/Star.svg" alt="">
                         </div>
                     </div>
-                    <div class="product3">
-                        <div class="name">Millets</div>
+                    <div class="hamid3-product3">
+                        <div class="hamid3-name">Millets</div>
                         <img src="" alt="">
                         <span>White Nuts</span>
                         <hr>
-                        <div class="prices">
-                            <span class="ex-price">$20.00</span>
-                            <span class="current-price">$15.00</span>
+                        <div class="hamid3-prices">
+                            <span class="hamid3-ex-price">$20.00</span>
+                            <span class="hamid3-current-price">$15.00</span>
                             <img src="img/shop/products/Star.svg" alt="">
                         </div>
                     </div>
-                    <div class="product4">
-                        <div class="name">Vegetable</div>
+                    <div class="hamid3-product4">
+                        <div class="hamid3-name">Vegetable</div>
                         <img src="" alt="">
                         <span>Vegan Red Tomato</span>
                         <hr>
-                        <div class="prices">
-                            <span class="ex-price">$20.00</span>
-                            <span class="current-price">$17.00</span>
+                        <div class="hamid3-prices">
+                            <span class="hamid3-ex-price">$20.00</span>
+                            <span class="hamid3-current-price">$17.00</span>
                             <img src="img/shop/products/Star.svg" alt="">
                         </div>
                     </div>
