all styles accumulated into one file(they work fine)

--- a/our-team.html
+++ b/our-team.html
@@ -10,7 +10,7 @@
         crossorigin="anonymous" 
         referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="css/our-team_style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Our Team</title>
 </head>
 <body>
