--- a/port-standart.html
+++ b/port-standart.html
@@ -10,7 +10,7 @@
         crossorigin="anonymous" 
         referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="css/port-standart_style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Portfolio Standard</title>
 </head>
 <body>
