--- a/shop.html
+++ b/shop.html
@@ -10,7 +10,7 @@
         crossorigin="anonymous" 
         referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="css/shop_style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Shop</title>
 </head>
 <body>
