--- a/about_us.html
+++ b/about_us.html
@@ -10,7 +10,7 @@
         crossorigin="anonymous" 
         referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="css/about_us_style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>About Us</title>
 </head>
 <body>
