--- a/shop_single.html
+++ b/shop_single.html
@@ -10,7 +10,7 @@
         crossorigin="anonymous" 
         referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="css/shop_single_style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Shop Single</title>
 </head>
 <body>
