--- a/about_us.html
+++ b/about_us.html
@@ -59,7 +59,7 @@
         </nav>
         <!-- end of navigation bar -->
 
-
+<!-- SHU YERDAN BOSHLANADI ABOUT US CODI -->
         <!-- header body content start -->
         <div class="hamid-header-container">
 
@@ -302,6 +302,8 @@
         </div>
         <!-- end of offers section -->
     </main>
+
+    <!-- SHU YERDA TUGAYDI ABOUT US CODI -->
     <footer class="default-site-footer">
         <div class="footer-container">
             <!----------------------------- footer subscribe form -------------------------->
