end of our team adaptive

--- a/our-team.html
+++ b/our-team.html
@@ -59,6 +59,8 @@
         </nav>
         <div class="header-body">
             <!-- end of navigation bar -->
+
+            <!-- SHU YERDAN TEAM CODE BOSHLANADI -->
             <div class="hamid1-header-container">
 
                 <!-- banner start -->
@@ -194,6 +196,8 @@
         </div>
 
     </main>
+
+    <!-- SHU YERDA TEAM CODE TUGAYDI -->
     <footer class="default-site-footer">
         <div class="footer-container">
             <!----------------------------- footer subscribe form -------------------------->
@@ -258,6 +262,8 @@
                 </div>
             </div>
         </div>
+
+
         <div class="footer-copyright-box">
             <div class="footer-hr"></div>
             <div class="footer-copyright">
