--- a/port-standart.html
+++ b/port-standart.html
@@ -59,6 +59,8 @@
         </nav>
         <div class="hamid2-header-body">
             <!-- end of navigation bar -->
+
+            <!-- SHU YERDAN BOSHLANADI -->
             <div class="hamid2-header-container">
 
                 <!-- banner start -->
@@ -133,6 +135,8 @@
         </div>
 
     </main>
+
+    <!-- SHU YERDA TUGAYDI -->
     <footer class="default-site-footer">
         <div class="footer-container">
             <!----------------------------- footer subscribe form -------------------------->
