--- a/shop_single.html
+++ b/shop_single.html
@@ -89,7 +89,7 @@
                         <div class="hamid3-pick-scale">
                             <span>Quantity:</span>
                             <input type="number" name="" id="" value="1" min="1">
-                            <button class="footer-form-button">
+                            <button id="hamid-casual-button">
                                 <span>Add To Cart</span>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 0 19 19" fill="none">
                                 <circle cx="9.5" cy="9.5" r="9.5" fill="#335B6B"/>
