--- a/shop_single.html
+++ b/shop_single.html
@@ -63,8 +63,8 @@
 
                 <!-- banner start -->
                 <div class="hamid3-head-baner">
-                    <img src="img/Images-s-img.svg" alt="" class="hamid3-head-img">
-                    <img src="img/Background Pattern-shop-single.svg" alt="" class="hamid3-head-img2">
+                    <img src="img/shop-single/Images-s-img.svg" alt="" class="hamid3-head-img">
+                    <img src="img/shop-single/Background Pattern-shop-single.svg" alt="" class="hamid3-head-img2">
                     <span class="hamid3-head-text">Shop Single</span>
                 </div>
                 <!--banner end -->
